estilo pantalla inicio

--- a/src/views/paginas/inicio.hbs
+++ b/src/views/paginas/inicio.hbs
@@ -1,6 +1,6 @@
 <div id="inicio">
-    <div class="container">
-        <div class="row justify-content-between">
+    <div class="container-fluid">
+        <div class="d-flex justify-content-around">
             <div id="btnCentro" class="col-md py-5 mx-auto">
                 <a href="deporte" type="button" class="btn btn-success btn-lg" data-bs-toggle="tooltip" data-bs-placement="top" title="Inicia como jugador para ser parte de un equipo y realizar deportes.">JUGADOR</a>
             </div>
