--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,15 +1,14 @@
 body {
-  background-color: rgba(0, 0, 0, 0.897)
+  background-color: rgba(0, 0, 0, 0.897);
 }
 #inicio {
   background-image: url(../img/imgInicio.jpg);
-  background-position: center center;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  height: 39rem;
-  padding-bottom: 0%;
-  margin-bottom: 0%  
+  
+  
 }
 
 #nombreEquipo {
