--- a/src/views/ingreso/registroDuenio.hbs
+++ b/src/views/ingreso/registroDuenio.hbs
@@ -11,7 +11,7 @@
                         <h3>Registro de Establecimiento</h3>
                     </div>
                     <div class="card-body">
-                        <form action="/paginas/duenio" method="get">                        
+                        <form action="/registroDuenio" method="post">                        
                             <div class="input-group mb-3">          
                                 <b><span style="color: red;">*  </span></b>                      
                                 <input type="cuit" class="form-control" name="cuit" placeholder="Cuit">
@@ -26,8 +26,7 @@
                             </div>                             
                             <b><span style="color: red;"><b>*</b></span><span style="font-size:small"> CAMPOS OBLIGATORIOS</span></b>                          
                             <div class="d-grid mb-2">
-                                <button type="submit" onclick="location.href='/paginas/duenio'"
-                                    class="btn btn-success btn-block">
+                                <button type="submit" class="btn btn-success btn-block">
                                     Registrarte
                                 </button>
                             </div>
