--- a/src/views/paginas/futbol.hbs
+++ b/src/views/paginas/futbol.hbs
@@ -13,7 +13,7 @@
                             <button type="button" class="btn btn-primary">Jugadores</button>
                         </div>
                         <div class="btn-group" role="group" aria-label="Basic outlined example">
-                            <a type="button" class="btn btn-success"
+                            <a type="button" class="btn btn-info"
                                 href="/paginas/crearEquipoFutbol/{{user.idUsuarios}}">Crear Equipo</a>
                             <button type="button" class="btn btn-success" data-bs-toggle="modal"
                                 data-bs-target="#misEquipo" data-bs-whatever="@equipo">Mis Equipos</button>
@@ -68,13 +68,14 @@
                             </tr>
                         </thead>
                         <tbody>
-                            {{#each cancha}}
+                            {{#each canchas}}
                             <tr>
                                 <td data-bs-toggle="tooltip" data-bs-placement="top" title="{{email}}">
-                                    {{nombreUsuario}}
+                                    {{nombreEstablecimiento}}
                                 </td>
-                                <td><a href="/paginas/equipo/{{nombreEquipo}}&{{idDeportes}}">{{nombreEquipo}}</a></td>
-                                <td>{{deporte}}</td>
+                                <td><a href="#">{{direccion}}</a></td>
+                                <td><b>#</b></td>
+                                <td><b>#</b></td>
                             </tr>
                             {{/each}}
                         </tbody>
