--- a/src/views/ingreso/registroDuenio.hbs
+++ b/src/views/ingreso/registroDuenio.hbs
@@ -14,15 +14,15 @@
                         <form action="/registroDuenio" method="post">                        
                             <div class="input-group mb-3">          
                                 <b><span style="color: red;">*  </span></b>                      
-                                <input type="cuit" class="form-control" name="cuit" placeholder="Cuit">
+                                <input type="cuit" class="form-control" name="cuit" placeholder="Cuit" required>
                             </div>
                              <div class="input-group mb-3">          
                                 <b><span style="color: red;">*  </span></b>                      
-                                <input type="cuit" class="form-control" name="nombreEstablecimiento" placeholder="Nombre">
+                                <input type="cuit" class="form-control" name="nombreEstablecimiento" placeholder="Nombre" required>
                             </div>
                              <div class="input-group mb-3">          
                                 <b><span style="color: red;">*  </span></b>                      
-                                <input type="cuit" class="form-control" name="direccion" placeholder="Direccion">
+                                <input type="cuit" class="form-control" name="direccion" placeholder="Direccion" required>
                             </div>                             
                             <b><span style="color: red;"><b>*</b></span><span style="font-size:small"> CAMPOS OBLIGATORIOS</span></b>                          
                             <div class="d-grid mb-2">
@@ -31,15 +31,7 @@
                                 </button>
                             </div>
                         </form>
-                    </div>
-                    <div class="card-footer">
-                        <span><b>¿Tienes una cuenta? </b></span>
-                        <div class="d-grid mb-2">
-                            <button onclick="location.href='/ingresoDuenio'" class="btn btn-primary btn-block">
-                                <span style="color: white">Inicia sesión</span>
-                            </button>
-                        </div>
-                    </div>
+                    </div>                   
                 </div>
             </div>
         </div>
