--- a/src/views/paginas/inicio.hbs
+++ b/src/views/paginas/inicio.hbs
@@ -1,14 +1,14 @@
 <div id="inicio">
-    <div class="container-fluid">
+    <div class="container-flex">
         <div class="d-flex justify-content-around">
-            <div id="btnCentro" class="col-md py-5 mx-auto">
+            <div id="btnCentro" class="py-5 mx-auto">
                 <a href="deporte" type="button" class="btn btn-success btn-lg" data-bs-toggle="tooltip" data-bs-placement="top" title="Inicia como jugador para ser parte de un equipo y realizar deportes.">JUGADOR</a>
             </div>
-            <div id="btnCentro" class="col-md py-5 mx-auto">
+            <div id="btnCentro" class="py-5 mx-auto">
                 <!-- logo de la app -->
-                <img src="/img/logo4.png" alt="Logo App" class="mx-1" width="300px">                
+                <img src="/img/logo4.png" srcset="/img/logo4.png 1024w, /img/logo4.png 320w" sizes="(mim-width: 300px) 33.3vw, 100vw" alt="Logo App" class="mx-1">                
             </div>
-            <div id="btnCentro" class="col-md py-5 mx-auto">
+            <div id="btnCentro" class="py-5 mx-auto">
                 <a href="duenio" type="button" class="btn btn-warning btn-lg" data-bs-toggle="tooltip" data-bs-placement="top" title="Inicia como cancha para ingresar tu establecimiento deportivo.">CANCHA</a>                
             </div>
         </div>
