--- a/src/views/ingreso/ingreso.hbs
+++ b/src/views/ingreso/ingreso.hbs
@@ -1,11 +1,11 @@
 <main class="formulario">
     <div class="container">
-        <div class="row justify-content-between">
-            <div id= "inicioCentrar" class="col-md-4 py-5">
+        <div class="row">
+            <div id= "inicioCentrar" class="col-md-4">
                 <!--agregue logo de la app -->
-                <a title="logoApp" href='/' ><img src="/img/logo4.png" alt="logoApp" width="250"/></a>                
+                <a title="logoApp" href='/' ><img src="/img/logo4.png" srcset="/img/logo4.png 1024w, /img/logo4.png 320w" sizes="(mim-width: 320px) 33vw, 100vw" alt="logoApp"></a>                
             </div>
-            <div class="col-md-4 py-5">
+            <div class="col offset-md-4">
                 <div class="card">
                     <div class="card-header">
                         <h3>Ingresar</h3>
@@ -35,11 +35,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <!--agregue acceso admin -->
-        <div id="linkCentro" class="col-md mx-auto">
-            <b>Ingresar como... <a href="paginas/vistaAdmin"  type="link" class="link link-primary link-lg">Administrador</a></b>
-            <h6>© 2021 APPasionados</h6>
         </div>
     </div>
 </main>
