--- a/src/views/ingreso/registroDuenio.hbs
+++ b/src/views/ingreso/registroDuenio.hbs
@@ -3,7 +3,7 @@
         <div class="row justify-content-between">
             <div id="inicioCentrar" class="col-md-4 py-5">
                 <!--agregue logo de la app -->
-                <a title="logoApp" href="/"><img src="/img/logo4.png" alt="logoApp" width="250" /></a>
+                <a title="logoApp" href="/"><img src="/img/logo4.png" srcset="/img/logo4.png 1024w, /img/logo4.png 280w" sizes="(mim-width: 300px) 33.3vw, 100vw" alt="logoApp"></a>
             </div>
             <div class="col-md-4 py-2">
                 <div id="card" class="card">
