--- a/src/views/paginas/basquet.hbs
+++ b/src/views/paginas/basquet.hbs
@@ -1,11 +1,11 @@
 <div id="basquet">
     <div class="container-fluid">
-        <div class="d-flex justify-content-around">
-            <div id="tablaEquipo" class="col-md-6 m-2 p-2">
-                <form class="d-flex">
+        <div class="row justify-content-between">
+            <div id="tablaEquipo" class="col-md-5 m-2 p-2">
+                <div class="d-flex">
                     <img class="rounded mx-2 d-block" src="/img/pelotaB.png" alt="" width="50" height="50">
                     <a class="navbar-brand" href="#">
-                        <h2 class=" text-white me-3"><b>EQUIPOS</b></h2>
+                        <h3 class=" text-white"><b>EQUIPOS</b></h3>
                     </a>
 
                     <div class="d-flex justify-content-between m-auto ">
@@ -20,7 +20,7 @@
                         </div>
                     </div>
 
-                </form>
+                </div>
                 <div id="scroll">
                     <table class="table table-hover table-info">
                         <thead class="fixed">
@@ -46,19 +46,41 @@
             </div>
 
     <!--Tabla Canchas-->
-            <div id="tablaEquipo" class="col-md-6 m-2 p-2">
+            <div id="tablaEquipo" class="col-md-5 m-2 p-2">
                 <form class="d-flex">
                     <a class="navbar-brand" href="#">
-                        <h2 class=" text-white me-3 px-5"><b>CANCHAS</b></h2>
+                        <h3 class=" text-white me-3 px-5"><b>CANCHAS</b></h3>
                     </a>
-
                     <div class="d-flex justify-content-between m-auto ">
                         <input type="text" class="form-control" name="buscarCancha" placeholder="Buscar Cancha" autofocus required>
                         <button type="button" class="btn btn-primary">Ir</button>
                     </div>
-
                 </form>
-                <div id="scroll">
+                 <div id="scroll">
+                    <table class="table table-hover table-info">
+                        <thead class="fixed">
+                            <tr>
+                                <th>Nombre</th>
+                                <th>Dirección</th>
+                                <th>Formato</th>
+                                <th>Número</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {{#each canchas}}
+                            <tr>
+                                <td data-bs-toggle="tooltip" data-bs-placement="top" title="{{email}}">
+                                    {{nombreEstablecimiento}}
+                                </td>
+                                <td><a href="#">{{direccion}}</a></td>
+                                <td><b>#</b></td>
+                                <td><b>#</b></td>
+                            </tr>
+                            {{/each}}
+                        </tbody>
+                    </table>
+                </div>
+                {{!-- <div id="scroll">
                     <table class="table table-hover table-info">
                         <thead class="fixed">
                             <tr>
@@ -80,15 +102,50 @@
                             {{/each}}
                         </tbody>
                     </table>
-                </div>
+                </div> --}}
             </div>
         </div>
-    </div>
-    
+    </div>    
     <div class="col-2  p-3">
         <a id="volver" href="/paginas/deporte" type="button" class="btn btn-dark">Volver</a>
     </div>
 
+</div>
+
+
+<!-- The Modal -->
+<div class="modal fade" id="misEquipo" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content bg-dark">
+
+            <!-- Modal Header -->
+            <div class="modal-header" id="misEquipo">
+                <h4 class="modal-title">MIS EQUIPOS</h4>
+                <button type="button" class="close" data-bs-dismiss="modal" id="crearEquipo">&times;</button>
+            </div>
+
+            <!-- Modal body -->
+            <div class="modal-body" id="misEquipo">
+                <table class="table text-center">
+                    <tbody>
+                        {{#each misEquipos}}
+                        <tr>
+                            <td><i>
+                                    <h4><a class="text-white"
+                                            href="/paginas/miEquipo/{{nombreEquipo}}">{{nombreEquipo}}</a></h4>
+                                </i></td>
+                        </tr>
+                        {{/each}}
+                    </tbody>
+                </table>
+
+            </div>
+            <!-- Modal footer -->
+            <div class="modal-footer" id="crearEquipo">
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
+            </div>
+        </div>
+    </div>
 </div>
 
 
