--- a/src/views/paginas/futbol.hbs
+++ b/src/views/paginas/futbol.hbs
@@ -1,18 +1,18 @@
 <div id="futbol">
     <div class="container-fluid">
-        <div class="d-flex justify-content-around">
-            <div id="tablaEquipo" class="col-md-6 m-2 p-2">
+        <div class="row justify-content-between">
+            <div id="tablaEquipo" class="col-lg-5 m-2 p-2">
                 <form class="d-flex">
                     <img class="rounded mx-2 d-block" src="/img/pelotaF.png" alt="" width="50" height="50">
                     <a class="navbar-brand" href="#">
-                        <h2 class=" text-white me-3"><b>EQUIPOS</b></h2>
+                        <h3 class=" text-white"><b>EQUIPOS</b></h3>
                     </a>
 
-                    <div class="d-flex justify-content-between m-auto ">
-                        <div class="btn-group" role="group" aria-label="Basic outlined example">
+                    <div class="d-flex justify-content-between m-auto">
+                        <div class="btn-group" role="group">
                             <button type="button" class="btn btn-primary">Jugadores</button>
                         </div>
-                        <div class="btn-group" role="group" aria-label="Basic outlined example">
+                        <div class="btn-group" role="group">
                             <a type="button" class="btn btn-info"
                                 href="/paginas/crearEquipoFutbol/{{user.idUsuarios}}">Crear Equipo</a>
                             <button type="button" class="btn btn-success" data-bs-toggle="modal"
@@ -36,7 +36,8 @@
                                 <td data-bs-toggle="tooltip" data-bs-placement="top" title="{{email}}">
                                     {{nombreUsuario}}
                                 </td>
-                                <td><a href="/paginas/equipo/{{nombreEquipo}}&{{idDeportes}}">{{nombreEquipo}}</a></td>
+                                <td><a href="/paginas/equipo/{{nombreEquipo}}&{{idDeportes}}">{{nombreEquipo}}</a>
+                                </td>
                                 <td>{{deporte}}</td>
                             </tr>
                             {{/each}}
@@ -44,15 +45,16 @@
                     </table>
                 </div>
             </div>
-<!--Tabla Canchas-->
-            <div id="tablaEquipo" class="col-md-6 m-2 p-2">
+            <!--Tabla Canchas-->
+            <div id="tablaEquipo" class="col-lg-5 m-2 p-2">
                 <form class="d-flex">
                     <a class="navbar-brand" href="#">
-                        <h2 class=" text-white me-3 px-5"><b>CANCHAS</b></h2>
+                        <h3 class=" text-white me-3 px-5"><b>CANCHAS</b></h3>
                     </a>
 
                     <div class="d-flex justify-content-between m-auto ">
-                        <input type="text" class="form-control" name="buscarCancha" placeholder="Buscar Cancha" autofocus required>
+                        <input type="text" class="form-control" name="buscarCancha" placeholder="Buscar Cancha"
+                            autofocus required>
                         <button type="button" class="btn btn-danger">Ir</button>
                     </div>
 
@@ -84,6 +86,7 @@
             </div>
 
         </div>
+
     </div>
     <div class="col-2  p-3">
         <a id="volver" href="/paginas/deporte" type="button" class="btn btn-dark">Volver</a>
