--- a/src/views/paginas/padel.hbs
+++ b/src/views/paginas/padel.hbs
@@ -1,11 +1,11 @@
 <div id="padel">
     <div class="container-fluid">
-        <div class="d-flex justify-content-around">
-            <div id="tablaEquipo" class="col-md-6 m-2 p-2">
-                <form class="d-flex">
-                    <img class="rounded mx-2 d-block" src="/img/pelotaP.png" alt="" width="50" height="50">
+        <div class="row justify-content-between">
+            <div id="tablaEquipo" class="col-md-5 m-2 p-2">
+                <div class="d-flex">
+                    <img class="rounded mx-2 d-block" src="/img/pelotaP.png" alt="" width="45" height="45">
                     <a class="navbar-brand" href="#">
-                        <h2 class=" text-white me-3"><b>EQUIPOS</b></h2>
+                        <h3 class=" text-white"><b>EQUIPOS</b></h3>
                     </a>
 
                     <div class="d-flex justify-content-between m-auto ">
@@ -20,7 +20,7 @@
                         </div>
                     </div>
 
-                </form>
+                </div>
                 <div id="scroll">
                     <table class="table table-hover table-info">
                         <thead class="fixed">
@@ -46,10 +46,10 @@
             </div>
 
     <!--Tabla Canchas-->
-            <div id="tablaEquipo" class="col-md-6 m-2 p-2">
+            <div id="tablaEquipo" class="col-md-5 m-2 p-2">
                 <form class="d-flex">
                     <a class="navbar-brand" href="#">
-                        <h2 class=" text-white me-3 px-5"><b>CANCHAS</b></h2>
+                        <h3 class=" text-white px-5"><b>CANCHAS</b></h3>
                     </a>
 
                     <div class="d-flex justify-content-between m-auto ">
