estilos botones pantallas de deportes

--- a/src/views/paginas/basquet.hbs
+++ b/src/views/paginas/basquet.hbs
@@ -15,7 +15,9 @@
                         <div class="btn-group" role="group" aria-label="Basic outlined example">
                             <a type="button" class="btn btn-warning"
                                 href="/paginas/crearEquipoBasquet/{{user.idUsuarios}}">Crear Equipo</a>
-                            <button type="button" class="btn btn-warning" data-bs-toggle="modal"
+                        </div>
+                        <div class="btn-group" role="group" aria-label="Basic outlined example">
+                            <button type="button" class="btn btn-danger" data-bs-toggle="modal"
                                 data-bs-target="#misEquipo" data-bs-whatever="@equipo">Mis Equipos</button>
                         </div>
                     </div>
