--- a/src/views/paginas/padel.hbs
+++ b/src/views/paginas/padel.hbs
@@ -15,7 +15,9 @@
                         <div class="btn-group" role="group" aria-label="Basic outlined example">
                             <a type="button" class="btn btn-info"
                                 href="/paginas/crearEquipoPadel/{{user.idUsuarios}}">Crear Equipo</a>
-                            <button type="button" class="btn btn-info" data-bs-toggle="modal"
+                        </div>
+                        <div class="btn-group" role="group" aria-label="Basic outlined example">
+                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#misEquipo" data-bs-whatever="@equipo">Mis Equipos</button>
                         </div>
                     </div>
