--- a/src/views/paginas/futbol.hbs
+++ b/src/views/paginas/futbol.hbs
@@ -10,15 +10,17 @@
 
                     <div class="d-flex justify-content-between m-auto">
                         <div class="btn-group" role="group">
-                            <button type="button" class="btn btn-primary">Jugadores</button>
+                            <button type="button" class="btn btn-success">Jugadores</button>
                         </div>
                         <div class="btn-group" role="group">
-                            <a type="button" class="btn btn-info"
-                                href="/paginas/crearEquipoFutbol/{{user.idUsuarios}}">Crear Equipo</a>
+                            <a type="button" class="btn btn-info" href="/paginas/crearEquipoFutbol/{{user.idUsuarios}}">Crear Equipo</a>
+                        </div>
+                        <div class="btn-group" role="group">
                             <button type="button" class="btn btn-success" data-bs-toggle="modal"
                                 data-bs-target="#misEquipo" data-bs-whatever="@equipo">Mis Equipos</button>
                         </div>
                     </div>
+                    
 
                 </form>
                 <div id="scroll">
