--- a/src/views/paginas/inicio.hbs
+++ b/src/views/paginas/inicio.hbs
@@ -11,19 +11,16 @@
                 <img src="/img/logo4.png" srcset="/img/logo4.png 1024w, /img/logo4.png 300w"
                     sizes="(mim-width: 300px) 33.3vw, 100vw" alt="Logo App" class="mx-1">
             </div>
-
             <div id="btnCentro" class="py-5 mx-auto">
                 <a href="duenio" type="button" class="btn btn-warning btn-lg" data-bs-toggle="tooltip"
                     data-bs-placement="top"
                     title="Inicia como cancha para ingresar tu establecimiento deportivo.">CANCHA</a>
             </div>
-           
-
-        </div>
+        </div>        
         <div id="linkCentro" class="col-sm-2 mx-auto">
-            <b>Ingresar como... <a href="paginas/vistaAdmin" type="link"
+            <b>Ingresar como... <a href="/paginas/vistaAdmin" type="link"
                     class="link link-primary link-lg">Administrador</a></b>
             <h6>© 2021 APPasionados</h6>
-        </div>
+        </div>        
     </div>
 </div>
