--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -6,15 +6,11 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed;
-  
-  
+  background-attachment: fixed  
 }
-
 #nombreEquipo {
   color: rgb(6, 100, 189);
 }
-
 h6 {
   color: rgba(0, 0, 0, 0.575);
   text-align: center;
