agrego favicon y lupa buscador

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -13,13 +13,20 @@
 
     <link rel="stylesheet" href="/css/style.css">
 
+{{!--script font awesome--}}
+    <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" data-auto-replace-svg="nest"></script>
+
+{{!--favicon--}}
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/img/favicon/site.webmanifest">
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     
     <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
     
-
     <title>APPasionados</title>
 </head>
 
