--- a/src/views/partials/barra.hbs
+++ b/src/views/partials/barra.hbs
@@ -17,7 +17,7 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Canchas</a>
+                    <a class="nav-link" href="#">Reservá ya!</a>
                 </li>
             </ul>
             
