--- a/src/views/paginas/padel.hbs
+++ b/src/views/paginas/padel.hbs
@@ -10,14 +10,14 @@
 
                     <div class="d-flex justify-content-between m-auto ">
                         <div class="btn-group" role="group" aria-label="Basic outlined example">
-                            <button type="button" class="btn btn-primary">Jugadores</button>
+                            <button type="button" class="btn btn-warning">Jugadores</button>
                         </div>
                         <div class="btn-group" role="group" aria-label="Basic outlined example">
-                            <a type="button" class="btn btn-info"
+                            <a type="button" class="btn btn-success"
                                 href="/paginas/crearEquipoPadel/{{user.idUsuarios}}">Crear Equipo</a>
                         </div>
                         <div class="btn-group" role="group" aria-label="Basic outlined example">
-                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                            <button type="button" class="btn btn-warning" data-bs-toggle="modal"
                                 data-bs-target="#misEquipo" data-bs-whatever="@equipo">Mis Equipos</button>
                         </div>
                     </div>
@@ -55,8 +55,10 @@
                     </a>
 
                     <div class="d-flex justify-content-between m-auto ">
-                        <input type="text" class="form-control" name="buscarCancha" placeholder="Buscar Cancha" autofocus required>
-                        <button type="button" class="btn btn-success">Ir</button>
+                        <input type="text" class="form-control" name="buscarCancha" placeholder="Buscar" autofocus required>
+                        <button class="btn btn-danger" type="reset">
+                            <i class="fas fa-search"></i> 
+                        </button>
                     </div>
 
                 </form>
