--- a/src/views/paginas/futbol.hbs
+++ b/src/views/paginas/futbol.hbs
@@ -2,27 +2,20 @@
     <div class="container-fluid">
         <div class="row justify-content-between">
             <div id="tablaEquipo" class="col-lg-5 m-2 p-2">
-                <form class="d-flex">
-                    <img class="rounded mx-2 d-block" src="/img/pelotaF.png" alt="" width="50" height="50">
+                <div class="d-flex">
+                    <img class="rounded mx-2 d-block" src="/img/pelotaF.png" alt="" width="45" height="45">
                     <a class="navbar-brand" href="#">
                         <h3 class=" text-white"><b>EQUIPOS</b></h3>
                     </a>
-
-                    <div class="d-flex justify-content-between m-auto">
-                        <div class="btn-group" role="group">
-                            <button type="button" class="btn btn-primary">Jugadores</button>
-                        </div>
-                        <div class="btn-group" role="group">
-                            <a type="button" class="btn btn-info" href="/paginas/crearEquipoFutbol/{{user.idUsuarios}}">Crear Equipo</a>
-                        </div>
-                        <div class="btn-group" role="group">
-                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                data-bs-target="#misEquipo" data-bs-whatever="@equipo">Mis Equipos</button>
-                        </div>
-                    </div>
                     
-
-                </form>
+                        <div class="btn-group" role="group">
+                            {{!-- <button type="button" class="btn btn-primary">Jugadores</button> --}}
+                            <button type="button" class="btn btn-info" onclick="location.href='/paginas/crearEquipoFutbol/{{user.idUsuarios}}'">Crear Equipo</button>
+                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                data-bs-target="#misEquipo" data-bs-whatever="@equipo">Mis Equipos</button>
+                        </div>        
+                               
+                </div>
                 <div id="scroll">
                     <table class="table table-hover table-info">
                         <thead class="fixed">
@@ -51,7 +44,7 @@
             <div id="tablaEquipo" class="col-lg-5 m-2 p-2">
                 <form class="d-flex">
                     <a class="navbar-brand" href="#">
-                        <h3 class=" text-white me-3 px-5"><b>CANCHAS</b></h3>
+                        <h3 class=" text-white px-5"><b>CANCHAS</b></h3>
                     </a>
 
                     <div class="d-flex justify-content-between m-auto ">
