modificacion botones tablas deportes

--- a/src/views/partials/barra.hbs
+++ b/src/views/partials/barra.hbs
@@ -12,12 +12,14 @@
                         aria-expanded="false">Deportes</a>
                     <ul class="dropdown-menu" aria-labelledby="dropdown04">
                         <li><a class="dropdown-item" href="/paginas/futbol">Fútbol</a></li>
+                        <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" href="/paginas/basquet">Básquet</a></li>
+                        <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" href="/paginas/padel">Pádel</a></li>
                     </ul>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Reservá ya!</a>
+                <li class="container-fluid">
+                    <a type="button" class="btn btn-primary" href="#">Reservá ya!</a>
                 </li>
             </ul>
             
@@ -29,7 +31,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <li class="nav-item">
-            <a class="nav-link-dark" href="/cerrarSesion" tabindex="-1" aria-disabled="true">Salir</a>
+            <a class="link link-danger" href="/cerrarSesion" tabindex="-1" aria-disabled="true">Salir</a>
         </li>
     </div>    
 </nav>
