--- a/src/views/paginas/basquet.hbs
+++ b/src/views/paginas/basquet.hbs
@@ -4,22 +4,25 @@
             <div id="tablaEquipo" class="col-md-5 m-2 p-2">
                 <div class="d-flex">
                     <img class="rounded mx-2 d-block" src="/img/pelotaB.png" alt="" width="50" height="50">
-                    <a class="navbar-brand" href="#">
-                        <h3 class=" text-white"><b>EQUIPOS</b></h3>
+                    <a class="navbar-brand">
+                        <a class="btn btn-dark btn-lg dropdown-toggle text-white" href="#" id="dropdown04" data-bs-toggle="dropdown"
+                        aria-expanded="false">EQUIPOS</a>
+                        <ul class="dropdown-menu" aria-labelledby="dropdown04">
+                            <li><a class="dropdown-item" href="#" data-bs-toggle="modal"
+                                data-bs-target="#misEquipo" data-bs-whatever="@equipo">Mis Equipos</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="/paginas/crearEquipoBasquet/{{user.idUsuarios}}">Crear Equipo</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#">Ver Jugadores</a></li>
+                        </ul>
                     </a>
-
                     <div class="d-flex justify-content-between m-auto ">
-                        <div class="btn-group" role="group" aria-label="Basic outlined example">
-                            <button type="button" class="btn btn-success">Jugadores</button>
-                        </div>
-                        <div class="btn-group" role="group" aria-label="Basic outlined example">
-                            <a type="button" class="btn btn-primary"
-                                href="/paginas/crearEquipoBasquet/{{user.idUsuarios}}">Crear Equipo</a>
-                        </div>
-                        <div class="btn-group" role="group" aria-label="Basic outlined example">
-                            <button type="button" class="btn btn-success" data-bs-toggle="modal"
-                                data-bs-target="#misEquipo" data-bs-whatever="@equipo">Mis Equipos</button>
-                        </div>
+                        <input type="text" class="form-control" name="buscarCancha" placeholder="Buscar"
+                            autofocus required>
+                        
+                        <button class="btn btn-danger" type="reset">
+                            <i class="fas fa-search"></i> 
+                        </button>
                     </div>
 
                 </div>
@@ -110,8 +113,8 @@
             </div>
         </div>
     </div>    
-    <div class="col-2  p-3">
-        <a id="volver" href="/paginas/deporte" type="button" class="btn btn-dark">Volver</a>
+    <div class="col-2  p-4">
+        <a id="volver" href="/paginas/deporte" type="button" class="btn btn-danger">Volver</a>
     </div>
 
 </div>
