--- a/src/views/paginas/futbol.hbs
+++ b/src/views/paginas/futbol.hbs
@@ -3,23 +3,28 @@
         <div class="row justify-content-between">
             <div id="tablaEquipo" class="col-lg-5 m-2 p-2">
                 <form class="d-flex">
-                    <img class="rounded mx-2 d-block" src="/img/pelotaF.png" alt="" width="50" height="50">
-                    <a class="navbar-brand" href="#">
-                        <h3 class=" text-white"><b>EQUIPOS</b></h3>
+                    <img class=" d-inline-block " src="/img/pelotaF.png" alt="" width="50" height="50">
+                    <a class="navbar-brand">
+                        <a class="btn btn-dark btn-lg dropdown-toggle text-white" href="#" id="dropdown04" data-bs-toggle="dropdown"
+                        aria-expanded="false">EQUIPOS</a>
+                        <ul class="dropdown-menu" aria-labelledby="dropdown04">
+                            <li><a class="dropdown-item" href="#" data-bs-toggle="modal"
+                                data-bs-target="#misEquipo" data-bs-whatever="@equipo">Mis Equipos</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="/paginas/crearEquipoFutbol/{{user.idUsuarios}}">Crear Equipo</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#">Ver Jugadores</a></li>
+                        </ul>
                     </a>
-
-                    <div class="d-flex justify-content-between m-auto">
-                        <div class="btn-group" role="group">
-                            <button type="button" class="btn btn-primary">Jugadores</button>
-                        </div>
-                        <div class="btn-group" role="group">
-                            <a type="button" class="btn btn-info" href="/paginas/crearEquipoFutbol/{{user.idUsuarios}}">Crear Equipo</a>
-                        </div>
-                        <div class="btn-group" role="group">
-                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                data-bs-target="#misEquipo" data-bs-whatever="@equipo">Mis Equipos</button>
-                        </div>
+                    <div class="d-flex justify-content-between m-auto ">
+                        <input type="text" class="form-control" name="buscarCancha" placeholder="Buscar"
+                            autofocus required>
+                        
+                        <button class="btn btn-danger" type="reset">
+                            <i class="fas fa-search"></i> 
+                        </button>
                     </div>
+                    
                     
 
                 </form>
@@ -47,6 +52,7 @@
                     </table>
                 </div>
             </div>
+            
             <!--Tabla Canchas-->
             <div id="tablaEquipo" class="col-lg-5 m-2 p-2">
                 <form class="d-flex">
@@ -93,8 +99,8 @@
         </div>
 
     </div>
-    <div class="col-2  p-3">
-        <a id="volver" href="/paginas/deporte" type="button" class="btn btn-dark">Volver</a>
+    <div class="col-2  p-4">
+        <a id="volver" href="/paginas/deporte" type="button" class="btn btn-danger">Volver</a>
     </div>
 
 </div>
