--- a/src/views/ingreso/registro.hbs
+++ b/src/views/ingreso/registro.hbs
@@ -2,9 +2,8 @@
     <div class="container">
         <div class="row justify-content-between">
             <div id= "inicioCentrar" class="col-md-4 py-5">
-                <!--agregue logo de la app -->
-                <a title="logoApp" href="/" ><img src="/img/logo4.png" alt="logoApp" width="250"/></a>
-                
+                <!--agregue logo de la app -->               
+                <a title="logoApp" href='/' ><img src="/img/app/logo4.png" srcset="/img/app/logo4.png 1024w, /img/logo4.png 320w" sizes="(mim-width: 320px) 33vw, 100vw" alt="logoApp"></a> 
             </div>
             <div class="col-md-4 py-4">
                 <div id="card" class="card">
