--- a/src/views/paginas/basquet.hbs
+++ b/src/views/paginas/basquet.hbs
@@ -3,7 +3,7 @@
         <div class="row justify-content-between">
             <div id="tablaEquipo" class="col-md-5 m-2 p-2">
                 <div class="d-flex">
-                    <img class="rounded mx-2 d-block" src="/img/pelotaB.png" alt="" width="50" height="50">
+                    <img class="rounded mx-2 d-block" src="/img/app/pelotaB.png" alt="" width="50" height="50">
                     <a class="navbar-brand">
                         <a class="btn btn-dark btn-lg dropdown-toggle text-white" href="#" id="dropdown04" data-bs-toggle="dropdown"
                         aria-expanded="false">EQUIPOS</a>
@@ -116,10 +116,7 @@
     <div class="col-2  p-4">
         <a id="volver" href="/paginas/deporte" type="button" class="btn btn-danger">Volver</a>
     </div>
-
 </div>
-
-
 <!-- The Modal -->
 <div class="modal fade" id="misEquipo" tabindex="-1">
     <div class="modal-dialog">
