--- a/src/views/paginas/deporte.hbs
+++ b/src/views/paginas/deporte.hbs
@@ -2,7 +2,7 @@
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active" style="background: rgb(32, 155, 16);">
-        <img class="d-block w-100" src="/img/f.jpg" alt="futbol">
+        <img class="d-block w-100" src="/img/app/f.jpg" alt="futbol">
         <div class="carousel-caption text-start">
           <h1>FÚTBOL</h1>
           <p id="citaAutor">"El fútbol se juega con la cabeza, los pies son solo tu herramienta."</p>
@@ -12,7 +12,7 @@
       </div>
 
       <div class="carousel-item" style="background: rgb(199, 135, 16);">
-        <img class="d-block w-100" src="/img/basquet.jpg" alt="basquet">
+        <img class="d-block w-100" src="/img/app/basquet.jpg" alt="basquet">
         <div class="carousel-caption text-start">
           <h1>BÁSQUET</h1>
           <p id="citaAutor">"El talento gana partidos, pero el trabajo en equipo y la inteligencia ganan campeonatos."</p>
@@ -22,7 +22,7 @@
       </div>
       
       <div class="carousel-item" style="background: rgb(28, 138, 202);">
-        <img class="d-block w-100" src="/img/padel.jpg" alt="padel">
+        <img class="d-block w-100" src="/img/app/padel.jpg" alt="padel">
         <div class="carousel-caption text-start">
           <h1>PÁDEL</h1>
           <p id="citaAutor">"No importa cómo te llegue la bola, siempre mirala con muchas ganas."</p>
