--- a/src/views/ingreso/ingreso.hbs
+++ b/src/views/ingreso/ingreso.hbs
@@ -3,7 +3,7 @@
         <div class="row">
             <div id= "inicioCentrar" class="col-md-4">
                 <!--agregue logo de la app -->
-                <a title="logoApp" href='/' ><img src="/img/logo4.png" srcset="/img/logo4.png 1024w, /img/logo4.png 320w" sizes="(mim-width: 320px) 33vw, 100vw" alt="logoApp"></a>                
+                <a title="logoApp" href='/' ><img src="/img/app/logo4.png" srcset="/img/app/logo4.png 1024w, /img/logo4.png 320w" sizes="(mim-width: 320px) 33vw, 100vw" alt="logoApp"></a>                
             </div>
             <div class="col offset-md-4">
                 <div class="card">
