--- a/src/views/paginas/futbol.hbs
+++ b/src/views/paginas/futbol.hbs
@@ -3,7 +3,7 @@
         <div class="row justify-content-between">
             <div id="tablaEquipo" class="col-lg-5 m-2 p-2">
                 <div class="d-flex">
-                    <img class=" d-inline-block " src="/img/pelotaF.png" alt="" width="50" height="50">
+                    <img class=" d-inline-block " src="/img/app/pelotaF.png" alt="" width="50" height="50">
                     <a class="navbar-brand">
                         <a class="btn btn-dark btn-lg dropdown-toggle text-white" href="#" id="dropdown04"
                             data-bs-toggle="dropdown" aria-expanded="false">EQUIPOS</a>
