--- a/src/views/paginas/padel.hbs
+++ b/src/views/paginas/padel.hbs
@@ -3,7 +3,7 @@
         <div class="row justify-content-between">
             <div id="tablaEquipo" class="col-md-5 m-2 p-2">
                 <div class="d-flex">
-                    <img class="rounded mx-2 d-block" src="/img/pelotaP.png" alt="" width="45" height="45">
+                    <img class="rounded mx-2 d-block" src="/img/app/pelotaP.png" alt="" width="45" height="45">
                     <a class="navbar-brand">
                         <a class="btn btn-dark btn-lg dropdown-toggle text-white" href="#" id="dropdown04" data-bs-toggle="dropdown"
                         aria-expanded="false">EQUIPOS</a>
