--- a/src/views/partials/barra.hbs
+++ b/src/views/partials/barra.hbs
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="/paginas/inicio">
-            <img src="/img/logo4.png" alt="" width="60" height="60" class="d-inline-block ">
+            <img src="/img/app/logo4.png" alt="" width="60" height="60" class="d-inline-block ">
         </a>
         <div class="collapse navbar-collapse" id="navbarsExample04">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
@@ -45,14 +45,14 @@
         <div class="modal-content" style="background-color: rgb(95, 162, 182);">
             <!-- Modal Header -->
             <div class="modal-header" id="miPerfil">
-                <h4 class="modal-title">Mi Perfil</h4>
+                <a href="/paginas/miPerfil/{{user.idUsuarios}}"><h4 class="modal-title text-white">Mi Perfil</h4></a>
                 <button type="button" class="close" data-bs-dismiss="modal" id="crearEquipo">&times;</button>
             </div>
             <!-- Modal body -->
             <div class="modal-body" id="miPerfil">
                 <div class="row ">
                     <div class="col-sm-3">
-                        <img src="/img/descarga/{{user.img}}" alt="perfil" width="125" height="120">
+                       <a href="/paginas/miPerfil/{{user.idUsuarios}}"><img src="/img/descarga/{{user.img}}" alt="perfil" width="125" height="120"></a>
                     </div>
                     <div class="col-sm-3">
                         <div class="d-flex ms-3">
