--- a/src/views/paginas/cancha.hbs
+++ b/src/views/paginas/cancha.hbs
@@ -15,6 +15,11 @@
                     <option type="text" value="">Formato</option>
                     <option type="text" value="Fútbol 5">Fútbol 5</option>
                     <option type="text" value="Fútbol 7">Fútbol 7</option>
+                    <option type="text" value="Fútbol 11">Fútbol 11</option>
+                    <option type="text" value="Básquet 2">Básquet 2</option>
+                    <option type="text" value="Básquet 5">Básquet 5</option>
+                    <option type="text" value="Pádel 1">Pádel 1</option>
+                    <option type="text" value="Pádel 2">Pádel 2</option>
                 </select>
             </div>
             
