--- a/src/views/paginas/duenio.hbs
+++ b/src/views/paginas/duenio.hbs
@@ -19,7 +19,7 @@
                         <table id="tablaScroll" class="table table-hover table-info">
                             <thead>
                                 <tr>
-                                    <th>Nombre</th>
+                                    <th>Nombre Establecimiento</th>
                                     <th>Dirección</th>
                                     <th>Cuit</th>
                                     <th>Número</th>
@@ -44,8 +44,8 @@
             </div>
         </div>
     </div>
-    <div class="col-2  p-3">
-        <a href="/paginas/inicio" type="button" class="btn btn-primary">Volver</a>
+    <div class="col-2  p-4">
+        <a id="volver" href="/paginas/inicio" type="button" class="btn btn-primary">Volver</a>
     </div>
     
 </div>
