--- a/src/views/paginas/equipo.hbs
+++ b/src/views/paginas/equipo.hbs
@@ -36,8 +36,9 @@
             </div>
         </div>
         {{/unless}}
-        <div class="col-2  p-3">
-            <a href="/paginas/futbol" type="button" class="btn btn-dark">Volver</a>
+        
+        <div class="col-2  p-4">
+            <a id="volver" href="/paginas/futbol" type="button" class="btn btn-danger">Volver</a>
         </div>
     </div>
 </div>
