--- a/src/views/partials/barra.hbs
+++ b/src/views/partials/barra.hbs
@@ -22,7 +22,7 @@
                     </ul>
                 </li>
                 <li class="container-fluid">
-                    <a type="button" class="btn btn-primary" href="#">Reservá ya!</a>
+                    <a type="button" class="btn btn-primary" href="/paginas/reserva">Reservá ya!</a>
                 </li>
             </ul>
         </div>
@@ -52,7 +52,7 @@
             <div class="modal-body" id="miPerfil">
                 <div class="row ">
                     <div class="col-sm-3">
-                       <a href="/paginas/miPerfil/{{user.idUsuarios}}"><img src="/img/descarga/{{user.img}}" alt="perfil" width="125" height="120"></a>
+                       <a><img src="/img/descarga/{{user.img}}" alt="" width="125" height="120"></a>
                     </div>
                     <div class="col-sm-3">
                         <div class="d-flex ms-3">
