--- a/src/views/paginas/futbol.hbs
+++ b/src/views/paginas/futbol.hbs
@@ -17,7 +17,7 @@
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Ver Jugadores</a></li>
+                            <li><a class="dropdown-item" href="/paginas/jugadores/{{user.idUsuarios}}">Ver Jugadores</a></li>
                         </ul>
                     </a>
                     <div class="d-flex justify-content-between m-auto ">
@@ -71,21 +71,19 @@
                     <table class="table table-hover table-info">
                         <thead class="fixed">
                             <tr>
-                                <th>Nombre</th>
+                                <th>Establecimiento</th>
                                 <th>Dirección</th>
-                                <th>Formato</th>
-                                <th>Número</th>
+                                <th>Deporte</th>
                             </tr>
                         </thead>
                         <tbody>
                             {{#each canchas}}
                             <tr>
                                 <td data-bs-toggle="tooltip" data-bs-placement="top" title="{{email}}">
-                                    {{nombreEstablecimiento}}
+                                    <a href="/paginas/verCancha">{{nombreEstablecimiento}}</a>
                                 </td>
-                                <td><a href="#">{{direccion}}</a></td>
-                                <td><b>#</b></td>
-                                <td><b>#</b></td>
+                                <td>{{direccion}}</td>
+                                <td>#</td>
                             </tr>
                             {{/each}}
                         </tbody>
