--- a/src/views/paginas/jugadores.hbs
+++ b/src/views/paginas/jugadores.hbs
@@ -1,18 +1,21 @@
 <div id="formularioF" class="container">
     <div class="col-md-9 m-auto p-4">
         <table class="table table-dark">
-            <h3><p id="semiTransparente" class="text-center py-2" style="color: rgb(0, 0, 0);">{{equipo}}</p></h3>
+            <h3><p id="semiTransparente" class="text-center py-2" style="color: rgb(0, 0, 0);">JUGADORES</p></h3>
             <thead class="table-danger">
-                <th>Usuario</th>
-                <th>Jugador</th>
-                <th>Posicion</th>
+                <th>Nombre/Apellido</th>
+                <th>Posición</th>
+                <th>Nombre de Usuario</th>
+                <th>Email</th>
+                
             </thead>
             <tbody>            
-                {{#each equipos}}
+                {{#each jugador}}
                 <tr>
-                <td>{{nombreUsuario}}</td>
-                <td>{{nombre}}</td>
+                <td>{{nombre}}{{apellido}}</td>
                 <td>{{posicion}}</td>
+                <td>{{nombreUsuario}}</td>
+                <td>{{email}}</td>
                 </tr>
                 {{/each}}
             </tbody>
